Correction head for lighthouse

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": "https://isabelle913.github.io/aec-web2-tp1/",
+  "start_url": "https://isabelle913.github.io/aec-web2-tp3/index.html",
   "theme_color": "#1472bf",
   "background_color": "#FFFFFF",
   "display": "standalone"
