Correction -4 theme-color for lighthouse

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
     }
   ],
   "start_url": "https://isabelle913.github.io/aec-web2-tp3/index.html",
-  "theme_color": "#1472bf",
+  "theme_color": "#1472BF",
   "background_color": "#FFFFFF",
   "display": "standalone"
 }
