--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,21 @@
   "short_name": "VisitQc",
   "icons": [
     {
-      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo512.png",
+      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo512.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpg",
       "purpose": "any maskable"
     },
     {
-      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo192.png",
+      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo192.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpg",
       "purpose": "any maskable"
     },
     {
-      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo144.png",
+      "src": "isabelle913/aec-web2-tp3/img/icons-manifest/logo144.jpg",
       "sizes": "144x144",
-      "type": "image/png",
+      "type": "image/jpg",
       "purpose": "any maskable"
     }
   ],
